--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
  
 <body>
-  <h1>Lewis you're ugly</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h1>Have you seen this man></h1>
+  <p>He was last seen doing a shit up the wall outside the Hare and Hounds pub in Sunbury.</p>
+  <img src="lewis.jpg">
 </body>
  
 </html>
