--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
  
 <body>
-  <h1>Have you seen this man></h1>
+  <h1>Have you seen this man</h1>
   <p>He was last seen doing a shit up the wall outside the Hare and Hounds pub in Sunbury.</p>
-  <img src="lewis.jpg">
+  <img src="./Lewis.jpg">
 </body>
  
 </html>
