--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
  
 <body>
-  <h1>Have you seen this man</h1>
-  <p>He was last seen doing a shit up the wall outside the Hare and Hounds pub in Sunbury.</p>
-  <img src="./Lewis.jpg">
+  <h1>Heading</h1>
+  <p>Not heading.</p>
 </body>
  
 </html>
