--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Dasmoto's Arts and Crafts</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -11,7 +11,7 @@
     <main>
       <section>
         <h2 class="sectiontitle" id="brushes">Brushes</h2>
-        <img src="./resources/images/brushes.webp">
+        <img src="./brushes.webp">
         <h3>Hacksaw Brushes</h3>
         <p>Made of the finest quality oak,
           Hacksaw brushes are known for their weight
@@ -21,7 +21,7 @@
       </section>
       <section>
         <h2 class="sectiontitle" id="frames">Frames</h2>
-        <img src="./resources/images/frames.webp">
+        <img src="./frames.webp">
         <h3>Art Frames (assorted)</h3>
         <p>Assorted frames made of different material, 
           including MDF, birchwood, and PDE. Select 
@@ -31,7 +31,7 @@
       </section>
       <section>
         <h2 class="sectiontitle" id="paint">Paint</h2>
-        <img src="./resources/images/paint.jpeg">
+        <img src="./paint.jpeg">
         <h3>Clean Finnish Paint</h3>
         <p>Imported paint from Finland. Over 256 colors 
           available in-store, varying in quantity 
