--- a/index.html
+++ b/index.html
@@ -41,5 +41,49 @@
           <span>Starting at $5.00 / tube.</span></p>
       </section>
     </main>
+    <table>
+      <thead>
+        <tr>
+          <th>Test 1</th>
+          <th>Test 2</th>
+          <th>Test 3</th>
+          <th>Test 4</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>6</td>
+          <td>7</td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>10</td>
+          <td>11</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>13</td>
+          <td>14</td>
+          <td>15</td>
+          <td>16</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+         <td>Test 5</td>
+         <td>Test 6</td>
+         <td>Test 7</td>
+         <td>Test 8</td>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
